feat: added translation for  detailed page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -372,5 +372,73 @@
         "not_found_title": "Sorry, but the page was not found",
         "not_found_subtitle": "but you can still return to the",
         "not_found_link": "main page"
+    },
+
+    "detailed_first": {
+        "detailed_sell_button": "For sale",
+        "detailed_rent_button": "For rent",
+        "detailed_address_cannes": "Cannes, France",
+        "detailed_address_nice": "Nice, France",
+        "detailed_title": "Apartment with sea view",
+        "detailed_subtitle": "On the Promenade des Anglais",
+        "detailed_description": "Fully renovated 3-room apartment on the 5th floor in a small residence on the famous Promenade des Anglais."
+    },
+
+    "detailed_second": {
+        "detailed_second_title": "About the object",
+        "detailed_second_link": "Learn about the object",
+        "detailed_second_choice": "Choice <br /> Azur Life",
+        "detailed_second_exclusive": "Exclusive <br /> in Azur Life",
+        "detailed_second_paragraph_first": "Located on the slopes of Cap Ferrat in a secluded location with spectacular sea views and just a short walk from the village and harbor of Saint Jean Cap Ferrat, this villa is one of the most attractive properties on this stretch of the French Riviera.",
+        "detailed_second_paragraph_second": "The modern villa offers an ideal setting for both relaxation and entertainment. Wide glass windows and sliding doors flood the rooms with natural light, while at the same time offering guests a magnificent view of the sea. 1000 m2 of living space, spread over four floors and serviced by a glass elevator, allows you to hold various events or find a quiet place to relax.",
+        "detailed_second_paragraph_third": "The villa has five luxurious bedrooms with private bathrooms, which can comfortably accommodate up to 10 guests. All rooms have living rooms, beautiful bathrooms and Bang & lufsen entertainment systems. The seventh double bedroom is available for staff."
+    },
+
+    "detailed_fourth": {
+        "detailed_fourth_title": "Details",
+        "detailed_fourth_title_common": "General",
+        "detailed_fourth_title_common_heating": "Conditioning",
+        "detailed_fourth_title_common_hot_water": "Individual",
+        "detailed_fourth_title_common_state": "Excellent condition",
+        "detailed_fourth_title_common_landmarks": "East, South, East",
+        "detailed_fourth_title_common_view": "Panoramic sea view",
+        "detailed_fourth_left_area": "Area",
+        "detailed_fourth_left_rooms": "Rooms",
+        "detailed_fourth_left_rooms_number": "rooms",
+        "detailed_fourth_left_heat": "Heating",
+        "detailed_fourth_left_hot_water": "Hot water access",
+        "detailed_fourth_left_state": "Status",
+        "detailed_fourth_left_landmarks": "Landmarks",
+        "detailed_fourth_left_view": "View",
+        "detailed_fourth_left_services": "Services",
+        "detailed_fourth_left_services_heating": "Air conditioning",
+        "detailed_fourth_left_services_glass": "Double glazing",
+        "detailed_fourth_left_services_tub": "Jacuzzi",
+        "detailed_fourth_left_services_marquise": "Electric awnings",
+        "detailed_fourth_left_services_barbecue": "Barbecue",
+        "detailed_fourth_left_services_concierge": "Concierge",
+        "detailed_fourth_left_services_pool": "Pool",
+        "detailed_fourth_left_services_view": "View",
+        "detailed_fourth_left_services_hearth": "Fireplace",
+        "detailed_fourth_left_services_net": "Internet",
+        "detailed_fourth_left_services_furniture": "Furniture",
+        "detailed_fourth_left_services_watering": "Sprinkler for watering",
+        "detailed_fourth_left_services_elevator": "Elevator",
+        "detailed_fourth_left_services_intercom": "Intercom",
+        "detailed_fourth_left_services_sauna": "Sauna",
+        "detailed_fourth_left_distance": "Distance",
+        "detailed_fourth_left_airport": "Airport",
+        "detailed_fourth_left_bus": "Bus stop",
+        "detailed_fourth_left_sea": "Sea",
+        "detailed_fourth_left_beach": "Beach",
+        "detailed_fourth_left_highway": "Highway",
+        "detailed_fourth_left_city_center": "City center",
+        "detailed_fourth_left_city_park": "Park",
+        "detailed_fourth_left_city_sea_port": "Seaport",
+        "detailed_fourth_description": "Beautiful fully renovated 3-room apartment on the 5th floor in a small residence on the famous Promenade des Anglais.",
+        "detailed_fourth_forty_minutes": "40 minutes",
+        "detailed_fourth_fifteen_minutes": "15 minutes",
+        "detailed_fourth_ten_minutes": "10 minutes",
+        "detailed_fourth_five_minutes": "5 minutes"
     }
 }
