--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -372,5 +372,73 @@
         "not_found_title": "Désolé, mais la page n'a pas été trouvée",
         "not_found_subtitle": "mais vous pouvez toujours revenir à la",
         "not_found_link": "page d'accueil"
+    },
+
+    "detailed_first": {
+        "detailed_sell_button": "Vente",
+        "detailed_rent_button": "Location",
+        "detailed_address_cannes": "Cannes, France",
+        "detailed_address_nice": "Nice, France",
+        "detailed_title": "Appartement avec vue sur la mer",
+        "detailed_subtitle": "Sur la promenade des Anglais",
+        "detailed_description": "Appartement de 3 pièces entièrement rénové au 5ème étage dans une petite résidence sur la célèbre promenade des Anglais."
+    },
+
+    "detailed_second": {
+        "detailed_second_title": "A propos de l'objet",
+        "detailed_second_link": "En savoir plus sur l'objet",
+        "detailed_second_choice": "Sélection <br /> Azur Life",
+        "detailed_second_exclusive": "Exclusif <br/ > dans Azur Life",
+        "detailed_second_paragraph_first": "Situé sur les pentes du Cap Ferrat, dans un endroit isolé avec une vue imprenable sur la mer et à quelques minutes à pied du village et du port de Saint-Jean-Cap-Ferrat, cette Villa est l'une des propriétés les plus attrayantes de cette partie de la côte d'Azur.",
+        "detailed_second_paragraph_second": "Cette Villa Moderne offre un cadre idéal pour les loisirs et les loisirs. De larges fenêtres en verre et des portes coulissantes inondent les chambres de lumière naturelle tout en offrant une vue magnifique sur la mer. Les 1000 m2 de surface habitable, répartis sur quatre étages et desservis par un ascenseur en verre, permettent d'organiser diverses activités ou de trouver un coin tranquille pour se détendre.",
+        "detailed_second_paragraph_third": "La Villa dispose de cinq chambres luxueuses avec salle de bains privative pouvant accueillir jusqu'à 10 personnes. Toutes les chambres ont des salons, de belles salles de bains et des systèmes de divertissement Bang & lufsen. La septième chambre double est disponible pour le personnel."
+    },
+
+    "detailed_fourth": {
+        "detailed_fourth_title": "Détails",
+        "detailed_fourth_title_common": "Général",
+        "detailed_fourth_title_common_heating": "Conditionnement",
+        "detailed_fourth_title_common_hot_water": "Individuel",
+        "detailed_fourth_title_common_state": "Excellent état",
+        "detailed_fourth_title_common_landmarks": "Est, Sud, est",
+        "detailed_fourth_title_common_view": "Vue Panoramique sur la mer",
+        "detailed_fourth_left_area":"Zone",
+        "detailed_fourth_left_rooms": "Pièces",
+        "detailed_fourth_left_rooms_number": "Pièces",
+        "detailed_fourth_left_heat": "Chauffage",
+        "detailed_fourth_left_hot_water": "Accès <br / > à l'eau chaude",
+        "detailed_fourth_left_state": "État",
+        "detailed_fourth_left_landmarks": "Repères",
+        "detailed_fourth_left_view": "Vue",
+        "detailed_fourth_left_services": "Services",
+        "detailed_fourth_left_services_heating": "Conditionnement",
+        "detailed_fourth_left_services_glass": "Double vitrage",
+        "detailed_fourth_left_services_tub": "Jacuzzi",
+        "detailed_fourth_left_services_marquise": "Marquises Électriques",
+        "detailed_fourth_left_services_barbecue": "Barbecue",
+        "detailed_fourth_left_services_concierge": "Concierge",
+        "detailed_fourth_left_services_pool": "Piscine",
+        "detailed_fourth_left_services_view": "Vue",
+        "detailed_fourth_left_services_hearth": "Cheminée",
+        "detailed_fourth_left_services_net": "Internet",
+        "detailed_fourth_left_services_furniture": "Meubles",
+        "detailed_fourth_left_services_watering": "Arroseur d'arrosage",
+        "detailed_fourth_left_services_elevator": "Ascenseur",
+        "detailed_fourth_left_services_intercom": "Interphone",
+        "detailed_fourth_left_services_sauna": "Sauna",
+        "detailed_fourth_left_distance": "Distance",
+        "detailed_fourth_left_airport": "Aéroport",        
+        "detailed_fourth_left_bus": "Arrêt de Bus",        
+        "detailed_fourth_left_sea": "Mer",        
+        "detailed_fourth_left_beach": "Plage",
+        "detailed_fourth_left_highway": "Autoroute",
+        "detailed_fourth_left_city_center": "Centre-ville",
+        "detailed_fourth_left_city_park": "Parc",
+        "detailed_fourth_left_city_sea_port": "Port Maritime",
+        "detailed_fourth_description": "Bel appartement de 3 pièces entièrement rénové au 5ème étage dans une petite résidence sur la célèbre promenade des Anglais.",
+        "detailed_fourth_forty_minutes": "40 minutes",
+        "detailed_fourth_fifteen_minutes": "15 minutes",
+        "detailed_fourth_ten_minutes": "10 minutes",
+        "detailed_fourth_five_minutes": "5 minutes"
     }
 }
