--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -366,5 +366,73 @@
         "not_found_title": "Извините, но страница не найдена",
         "not_found_subtitle": "но вы все ещё можете вернуться на",
         "not_found_link": "главную страницу"
+    },
+
+    "detailed_first": {
+        "detailed_sell_button": "Продажа",
+        "detailed_rent_button": "Аренда",
+        "detailed_address_cannes": "Канны, Франция",
+        "detailed_address_nice": "Ницца, Франция",
+        "detailed_title": "Апартаменты с видом на море",
+        "detailed_subtitle": "На Английской набережной",
+        "detailed_description": "Полностью отремонтированная 3-комнатная квартира на 5 этаже в небольшой резиденции на знаменитой Английской набережной."
+    },
+
+    "detailed_second": {
+        "detailed_second_title": "Об объекте",
+        "detailed_second_link": "Узнать об объекте",
+        "detailed_second_choice": "Выбор <br /> Azur Life",
+        "detailed_second_exclusive": "Эксклюзивно <br /> в Azur Life",
+        "detailed_second_paragraph_first": "Расположенная на склонах Кап-Ферра в уединенном месте с захватывающим видом на море и всего в нескольких минутах ходьбы от деревни и гавани Сен-Жан-Кап-Ферра, эта вилла является одним из самых привлекательных объектов недвижимости на этом участке Французской Ривьеры.",
+        "detailed_second_paragraph_second": "Современная вилла предлагает идеальную обстановку как для отдыха, так и для развлечений. Широкие стеклянные окна и раздвижные двери заливают комнаты естественным светом, в то же время открывая гостям великолепный вид на море. 1000 м² жилой площади, расположенной на четырех этажах и обслуживаемой стеклянным лифтом, позволяют проводить различные мероприятия или найти тихий уголок для отдыха.",
+        "detailed_second_paragraph_third": "Вилла располагает пятью роскошными спальнями с отдельными ванными комнатами, в которых с комфортом могут разместиться до 10 гостей. Во всех комнатах есть гостиные, красивые ванные комнаты и развлекательные системы Bang & lufsen. Седьмая спальня с двуспальной кроватью доступна для персонала."
+    },
+
+    "detailed_fourth": {
+        "detailed_fourth_title": "Детали",
+        "detailed_fourth_title_common": "Общее",
+        "detailed_fourth_title_common_heating": "Кондиционирование",
+        "detailed_fourth_title_common_hot_water": "Индивидуальный",
+        "detailed_fourth_title_common_state": "Отличное состояние",
+        "detailed_fourth_title_common_landmarks": "Восток, Юг, Восток",
+        "detailed_fourth_title_common_view": "Панорамный вид на море",
+        "detailed_fourth_left_area": "Площадь",
+        "detailed_fourth_left_rooms": "Комнаты",
+        "detailed_fourth_left_rooms_number": "комнат",
+        "detailed_fourth_left_heat": "Отопление",
+        "detailed_fourth_left_hot_water": "Доступ <br /> к горячей воде",
+        "detailed_fourth_left_state": "Состояние",
+        "detailed_fourth_left_landmarks": "Ориентиры",
+        "detailed_fourth_left_view": "Вид",
+        "detailed_fourth_left_services": "Услуги",
+        "detailed_fourth_left_services_heating": "Кондиционирование",
+        "detailed_fourth_left_services_glass": "Двойное остекление",
+        "detailed_fourth_left_services_tub": "Джакузи",
+        "detailed_fourth_left_services_marquise": "Электрические маркизы",
+        "detailed_fourth_left_services_barbecue": "Барбекю",
+        "detailed_fourth_left_services_concierge": "Консьерж",
+        "detailed_fourth_left_services_pool": "Бассейн",
+        "detailed_fourth_left_services_view": "Вид",
+        "detailed_fourth_left_services_hearth": "Камин",
+        "detailed_fourth_left_services_net": "Интернет",
+        "detailed_fourth_left_services_furniture": "Мебель",
+        "detailed_fourth_left_services_watering": "Спринклер для полива",
+        "detailed_fourth_left_services_elevator": "Лифт",
+        "detailed_fourth_left_services_intercom": "Домофон",
+        "detailed_fourth_left_services_sauna": "Сауна",
+        "detailed_fourth_left_distance": "Расстояние",
+        "detailed_fourth_left_airport": "Аэропорт",        
+        "detailed_fourth_left_bus": "Автобусная остановка",        
+        "detailed_fourth_left_sea": "Море",        
+        "detailed_fourth_left_beach": "Пляж",
+        "detailed_fourth_left_highway": "Шоссе",
+        "detailed_fourth_left_city_center": "Центр города",
+        "detailed_fourth_left_city_park": "Парк",
+        "detailed_fourth_left_city_sea_port": "Морской порт",
+        "detailed_fourth_description": "Прекрасная полностью отремонтированная 3-комнатная квартира на 5 этаже в небольшой резиденции на знаменитой Английской набережной.",
+        "detailed_fourth_forty_minutes": "40 минут",
+        "detailed_fourth_fifteen_minutes": "15  минут",
+        "detailed_fourth_ten_minutes": "10  минут",
+        "detailed_fourth_five_minutes": "5 минут"
     }
 }
