--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -440,5 +440,22 @@
         "detailed_fourth_fifteen_minutes": "15 minutes",
         "detailed_fourth_ten_minutes": "10 minutes",
         "detailed_fourth_five_minutes": "5 minutes"
+    },
+
+    "menu": {
+        "menu_contact_button": "Contact us",
+        "menu_link_fee": "Our commission",
+        "menu_link_privacy": "Privacy Policy",
+        "menu_link_about": "About us",
+        "menu_link_objects": "All objects",
+        "menu_link_sell": "Sale",
+        "menu_link_rent": "Rent",
+        "menu_link_blog": "Blog",
+        "menu_link_join": "Join us",
+        "menu_link_buy-sell-rent": "Buy, sell, rent with us",
+        "menu_link_expertise": "Expert assessment",
+        "menu_link_presentation": "Presentation",
+        "menu_link_property": "Property management",
+        "menu_link_concierge": "Concierge service"
     }
 }
