--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -434,5 +434,22 @@
         "detailed_fourth_fifteen_minutes": "15  минут",
         "detailed_fourth_ten_minutes": "10  минут",
         "detailed_fourth_five_minutes": "5 минут"
+    },
+
+    "menu": {
+        "menu_contact_button" : "Связаться с нами",
+        "menu_link_fee" : "Наша комиссия",
+        "menu_link_privacy" : "Политика конфиденциальности",
+        "menu_link_about" : "О нас",
+        "menu_link_objects" : "Все объекты",
+        "menu_link_sell" : "Продажа",
+        "menu_link_rent" : "Аренда",
+        "menu_link_blog" : "Блог",
+        "menu_link_join" : "Присоединиться к нам",
+        "menu_link_buy-sell-rent" : "Купить, продать, арендовать с нами",
+        "menu_link_expertise" : "Экспертная оценка",
+        "menu_link_presentation" : "Презентация",
+        "menu_link_property" : "Управление недвижимостью",
+        "menu_link_concierge" : "Консьерж-сервис"
     }
 }
