--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -421,9 +421,9 @@
         "detailed_fourth_left_services_intercom": "Домофон",
         "detailed_fourth_left_services_sauna": "Сауна",
         "detailed_fourth_left_distance": "Расстояние",
-        "detailed_fourth_left_airport": "Аэропорт",        
-        "detailed_fourth_left_bus": "Автобусная остановка",        
-        "detailed_fourth_left_sea": "Море",        
+        "detailed_fourth_left_airport": "Аэропорт",
+        "detailed_fourth_left_bus": "Автобусная остановка",
+        "detailed_fourth_left_sea": "Море",
         "detailed_fourth_left_beach": "Пляж",
         "detailed_fourth_left_highway": "Шоссе",
         "detailed_fourth_left_city_center": "Центр города",
@@ -437,19 +437,35 @@
     },
 
     "menu": {
-        "menu_contact_button" : "Связаться с нами",
-        "menu_link_fee" : "Наша комиссия",
-        "menu_link_privacy" : "Политика конфиденциальности",
-        "menu_link_about" : "О нас",
-        "menu_link_objects" : "Все объекты",
-        "menu_link_sell" : "Продажа",
-        "menu_link_rent" : "Аренда",
-        "menu_link_blog" : "Блог",
-        "menu_link_join" : "Присоединиться к нам",
-        "menu_link_buy-sell-rent" : "Купить, продать, арендовать с нами",
-        "menu_link_expertise" : "Экспертная оценка",
-        "menu_link_presentation" : "Презентация",
-        "menu_link_property" : "Управление недвижимостью",
-        "menu_link_concierge" : "Консьерж-сервис"
+        "menu_contact_button": "Связаться с нами",
+        "menu_link_fee": "Наша комиссия",
+        "menu_link_privacy": "Политика конфиденциальности",
+        "menu_link_about": "О нас",
+        "menu_link_objects": "Все объекты",
+        "menu_link_sell": "Продажа",
+        "menu_link_rent": "Аренда",
+        "menu_link_blog": "Блог",
+        "menu_link_join": "Присоединиться к нам",
+        "menu_link_buy-sell-rent": "Купить, продать, арендовать с нами",
+        "menu_link_expertise": "Экспертная оценка",
+        "menu_link_presentation": "Презентация",
+        "menu_link_property": "Управление недвижимостью",
+        "menu_link_concierge": "Консьерж-сервис"
+    },
+
+    "navigation_bottom_links": {
+        "navigation_bottom_links_title_main": "Вернуться на главную страницу",
+        "navigation_bottom_links_title_sell_objects": "Объекты на продажу",
+        "navigation_bottom_links_title_rent_objects": "Объекты в аренду",
+        "navigation_bottom_links_home": "Вернуться на главную страницу",
+        "navigation_bottom_links_about": "О нас",
+        "navigation_bottom_links_objects": "Все объекты",
+        "navigation_bottom_links_sell": "Продажа",
+        "navigation_bottom_links_rent": "Аренда",
+        "navigation_bottom_links_buy-sell-rent": "Купить, продать, арендовать с нами",
+        "navigation_bottom_links_property": "Управление недвижимостью",
+        "navigation_bottom_links_concierge": "Консьерж-сервис",
+        "navigation_bottom_links_expertise": "Экспертная оценка",
+        "navigation_bottom_links_fee": "Наша комиссия"
     }
 }
